--- a/docs/07. Building server.md
+++ b/docs/07. Building server.md
@@ -3,23 +3,41 @@ As you know, QuickJS allows you to compile JS code into a
 native application. This means that you can compile your 
 server too.
 
-To do this, pass your script as an input argument to the 
-compiler:
+### Compilation requirements
+* Web server written on QuickJS + QuickWebServer;
+* QuickJS must be installed on your system.
+
+### Before we begin
+
+Since QWS is a shared library, in order to combine all the 
+functionality of QuickJS and the server in a single 
+executable file, you need to build your project in 
+static linking mode.
+
+This one can be confusing if you haven’t worked with 
+building C projects before. This is why QWS provides a 
+Makefile generator in which all the build rules and 
+parameters are written for you.
+
+### Using the Makefile generator
+For example, consider the following working environment. 
+Your project is located in the`~/work/qws_server` folder.
+You installed QuickWebServer through NPM, so it is 
+located in `~/work/qws_server/node_modules/quickwebserver`.
+
+This directory contains the `create-build-makefile.sh` 
+file, which is responsible for creating the Makefile. 
+Call it with passing the path to the input (main) script 
+of your application as an argument.
+
+**Important:** The Makefile will be created in the 
+folder where you invoke the command. I recommend 
+calling the command in the root directory of your project:
 
 ```bash
-qjsc -flto -o mysite mysite.js
+~/work/qws_server $: ./node_modules/quickwebserver/create-build-makefile.sh ~/work/qws_server/index.js
 ```
 
-You will see a message like this:
-```bash
-Warning: binary module './libqws.so' will be dynamically loaded
-```
-
-That means that you need to store file `libqws.so` near your
-executable. 
-
-It is located in the installed library folder inside 
-`node_modules` (if using NPM) or in the folder where you 
-cloned the repository.
-
-Just copy it along with the compiled server application.
+When the command is done, you can call `make` and your 
+project will be built. An executable file with the same 
+name will appear next to the main file.
