--- a/docs/07. Building server.md
+++ b/docs/07. Building server.md
@@ -5,7 +5,24 @@ server too.
 
 ### Compilation requirements
 * Web server written on QuickJS + QuickWebServer;
+* Your QuickWebServer imports should be a bit modified (read below);
 * QuickJS must be installed on your system.
+
+### Modifying imports
+The QuickWebServer for runtime is slightly different 
+from the version for building the executable. 
+Fortunately, you don't have to do a lot of things. 
+In all files where you import QuickWebServer, 
+you need to change the import as follows:
+
+```javascript
+// before: for working in runtime
+import QuickWebServer from './node_modules/quickwebserver/src/QuickWebServer.js'
+
+// after: for building an executable
+import QuickWebServer from './node_modules/quickwebserver/src/QuickWebServer.build.js'
+```
+That's all, you can proceed to the next steps.
 
 ### Before we begin
 
@@ -22,7 +39,7 @@ parameters are written for you.
 ### Using the Makefile generator
 For example, consider the following working environment. 
 Your project is located in the`~/work/qws_server` folder.
-You installed QuickWebServer through NPM, so it is 
+You installed QuickWebServer via NPM, so it is 
 located in `~/work/qws_server/node_modules/quickwebserver`.
 
 This directory contains the `create-build-makefile.sh` 
@@ -41,3 +58,6 @@ calling the command in the root directory of your project:
 When the command is done, you can call `make` and your 
 project will be built. An executable file with the same 
 name will appear next to the main file.
+
+This executable is ready to be deployed. No QWS
+shared library required.
